apps/base/element_changedetection/element_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: element-changedetection
    namespace: changedetection
spec:
    replicas: 1
    selector:
        matchLabels:
            app: element-changedetection
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: element-changedetection
        spec:
            containers:
                - image: archivebox/archivebox:latest
                  imagePullPolicy: Always
                  name: element-changedetection
                  command:
                      - /app/bin/docker_entrypoint.sh
                  args:
                      #- init
                      #- --setup
                      - server
                      - 0.0.0.0:8000
                  livenessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /
                          port: 8000
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 8000
                  resources:
                      requests:
                          ephemeral-storage: 1024Mi
                          cpu: 100m
                          memory: 200Mi
                      limits:
                          ephemeral-storage: 2048Mi
                          cpu: 2000m
                          memory: 2000Mi
                  volumeMounts:
                      - mountPath: /data
                        name: element-changedetection-data
                      - mountPath: /tmp
                        name: tmp
                - image: archivebox/archivebox:latest
                  imagePullPolicy: Always
                  name: element-changedetection-scheduler
                  command:
                      - /app/bin/docker_entrypoint.sh
                  args:
                      - schedule
                      - --foreground
                      - --update
                      - --every="15 * * * *"
                  resources:
                      requests:
                          ephemeral-storage: 1024Mi
                          cpu: 100m
                          memory: 200Mi
                      limits:
                          ephemeral-storage: 2048Mi
                          cpu: 2000m
                          memory: 3000Mi
                  volumeMounts:
                      - mountPath: /data
                        name: element-changedetection-data
                      - mountPath: /tmp
                        name: tmp
                - image: archivebox/sonic:latest
                  imagePullPolicy: Always
                  name: element-changedetection-sonic
                  resources:
                      requests:
                          ephemeral-storage: 1024Mi
                          cpu: 100m
                          memory: 200Mi
                      limits:
                          ephemeral-storage: 2048Mi
                          cpu: 2000m
                          memory: 3000Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                          #add:
                          #    - SYS_ADMIN
                      readOnlyRootFilesystem: true
                      runAsNonRoot: false
                  volumeMounts:
                      - mountPath: /var/lib/sonic/store
                        name: element-changedetection-data
                        subPath: sonic
                      - mountPath: /data
                        name: element-changedetection-data
                      - mountPath: /tmp
                        name: tmp
            volumes:
                - name: element-changedetection-data
                  persistentVolumeClaim:
                      claimName: element-changedetection-data
                - name: tmp
                  emptyDir:
                      sizeLimit: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: element-changedetection
    name: element-changedetection-srv
    namespace: changedetection
spec:
    ports:
        - port: 8000
          protocol: TCP
          targetPort: 8000
    selector:
        app: element-changedetection
    type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: element-changedetection
    namespace: changedetection
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - "element-changes.midnightthoughts.space"
    rules:
        - backendRefs:
              - name: element-changedetection-srv
                port: 8000
